# sqsLambdaPadExtract

./: Cargo.toml
src/: main.rs
